fixed position for project elements on mobile

--- a/projectStyle.css
+++ b/projectStyle.css
@@ -75,7 +75,8 @@
 /* mobile site (tested on iPhone 10) */
 @media screen and (max-width:768px) {
     .projectEle {
-        position: static;
+        position: absolute;
+        display: block;
     }
 
     .projectEle:nth-child(1) {
